Fix dark mode issue of lock icon
Position and Size dialog and sidebar position and size dock lock icon
was dark in dark mode. We inverted it.

Reviewed-on: https://gerrit.collaboraoffice.com/c/online/+/2603
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2374,7 +2374,8 @@ button.has-img img {
 [data-theme='dark'] #CTL_RECT img.ui-drawing-area,
 [data-theme='dark'] #CTL_ANGLE img.ui-drawing-area,
 [data-theme='dark'] #daRatioTop img.ui-drawing-area,
-[data-theme='dark'] #daRatioBottom img.ui-drawing-area {
+[data-theme='dark'] #daRatioBottom img.ui-drawing-area,
+[data-theme='dark'] img#imRatio.ui-image {
 	filter: invert(.95)
 }
 
